[tool.poetry]
name = "dted"
version = "1.0.3"
description = "Parser for DTED data."
authors = ["Ben Bonenfant <bonenfan5ben@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/bbonenfant/dted"
repository = "https://github.com/bbonenfant/dted"
keywords = ['DTED', 'SRTM', 'terrain', 'elevation']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.7"
cached-property = { version = ">1.5", python = "<3.8" }
importlib-metadata = { version = ">4.0", python = "<3.8" }
numpy = "^1.20"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-black = "^0.3.12"
pytest-mypy = "^0.8.1"

[tool.poetry.scripts]
dted = "dted.__main__:main"

[tool.black]
line-length = 92
target-version = ['py37', 'py38', 'py39']
exclude = '\.git|\.idea|\.venv|\.\*cache|\*\.egg-info'

[tool.mypy]
python_version = 3.7
mypy_path = "dted"
ignore_errors = false
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv --black --mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
